--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,37 @@
+ /* Header Styling */
+    .header-container{
+        width: 1579px;
+        height: 94px;
+        margin-bottom: 30px;
+        margin-left: -8px;
+        background-color: #562EFF;
+       
+    }
+   .header-image{
+    width: 51px;
+    height: 51px;
+   }
+   .header-contents{
+       display: flex;
+       /* align-items: center; */
+       justify-content :space-evenly;
+       margin-top: -8px;
+   }
+   .right-header-contents{
+       display: flex;
+       margin-top: 15px;
+   }
+   .left-header-contents{
+       margin-top: 15px;
+   }
+   .header-links{
+    margin-right: 30px;
+   }
+   .header-links a{
+       text-decoration: none;
+       margin-right: 15px;
+   }
+ /* Main Styling */
 .top-players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
