--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
         margin-bottom: 30px;
         margin-left: -8px;
         background-color: #562EFF;
-       
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
    .header-image{
     width: 51px;
